--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
             Lidia Mekonnen, Mesfin
         </h1>
         <ul>
-            <li><a href="selu/selu.html">lab1 Monday - Homepage</a></li><br>
-            <li><a href="aboutme/aboutme.html">lab2 Tuesday- About me</a></li>
-            <li><a href="pie/pie.html">lab2 Tuesday - Recipe</a></li><br>
-            <li><a href="movie/tmnt.html">lab3 Wednesday- Movie Review</a></li><br>
-            <li><a href="decorateMyText/form.html">lab4 Thursday - Grades Exercise</a></li>
-            <li><a href="nurdLuv/signup.html">lab4 Thursday - NurdLuv</a></li><br>
-            <li><a href="exercise/click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
-            <li><a href="calculator/calculator.html">lab5 Friday - Calculator Tip</a></li><br>
-            <li><a href="decorateMyText/decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
-            <li><a href="exercise/Timer.js">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
-            <li><a href="asci/ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
-            <li><a href="exercise/scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
-            <li><a href="exercise/module.js">lab9 Wednesday - Module Exercises</a></li><br>
-            <li><a href="bank/account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
-            <li><a href="maze/maze.html">lab11 Saturday - Mouse Maze</a></li>
-            <li><a href="exercise/jQueryQuiz.html">lab11 Saturday - jQuery Quiz 1</a></li><br>
-            <li><a href="exercise/Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li>
-            <li><a href="puzzle/fifteen.html">lab12 Monday - DOM and Events (15 Puzzle)</a></li><br>
-            <li><a href="exercise/quiz3.html">lab13 Tuesday - jQuery Quiz 3</a></li><br>
-            <li><a href="NodeJs/N1.js">lab14 Wednesday - N1 exercise</a></li>
-            <li><a href="NodeJs/N2.js">lab14 Wednesday - N2 exercise</a></li>
-            <li><a href="NodeJs/N3.js">lab14 Wednesday - N3 exercise</a></li>
-            <li><a href="NodeJs/N4.js">lab14 Wednesday - N4 exercise</a></li><br>
-            <li><a href="NodeJs/Calculator/calculator.html">lab15 Thursday - Simple Calculator Lab</a></li><br>
-            <li><a href="NodeJs/node.html">lab16 Friday - Number Quiz</a></li><br>
+            <li><a href="selu/selu.html">W1D1 - Homepage</a></li><br>
+            <li><a href="aboutme/aboutme.html">W1D2 - About me</a></li>
+            <li><a href="pie/pie.html">W1D2 - Recipe</a></li><br>
+            <li><a href="movie/tmnt.html">W1D3 - Movie Review</a></li><br>
+            <li><a href="decorateMyText/form.html">W1D4 - Grades Exercise</a></li>
+            <li><a href="nurdLuv/signup.html">W1D4 - NurdLuv</a></li><br>
+            <li><a href="exercise/click.html">W1D5 - onClick Alert & JavaScript Exercises</a></li>
+            <li><a href="calculator/calculator.html">W1D5 - Calculator Tip</a></li><br>
+            <li><a href="decorateMyText/decoratemytext.html">W1D6 - Decorate My Text</a></li>
+            <li><a href="exercise/Timer.js">W1D6 - JavaScript Timer Exercises</a></li><br>
+            <li><a href="asci/ascii.html">W2D1 - ASCII Animation Viewer</a></li><br>
+            <li><a href="exercise/scopeExercises.js">W2D2 - Scope Exercise</a></li><br>
+            <li><a href="exercise/module.js">W2D3 - Module Exercises</a></li><br>
+            <li><a href="bank/account.html">W2D4 - Module and Closure Lab</a></li><br>
+            <li><a href="maze/maze.html">W2D6 - Mouse Maze</a></li>
+            <li><a href="exercise/jQueryQuiz.html">W2D6 - jQuery Quiz 1</a></li><br>
+            <li><a href="exercise/Quiz2.html">W3D1 - jQuery Quiz 2</a></li>
+            <li><a href="puzzle/fifteen.html">W3D1 - DOM and Events (15 Puzzle)</a></li><br>
+            <li><a href="exercise/quiz3.html">W3D2 - jQuery Quiz 3</a></li><br>
+            <li><a href="NodeJs/N1.js">W3D4 - N1 exercise</a></li>
+            <li><a href="NodeJs/N2.js">W3D4 - N2 exercise</a></li>
+            <li><a href="NodeJs/N3.js">W3D4 - N3 exercise</a></li>
+            <li><a href="NodeJs/N4.js">W3D4 - N4 exercise</a></li><br>
+            <li><a href="NodeJs/Calculator/calculator.html">W3D5 - Simple Calculator Lab</a></li><br>
+            <li><a href="NodeJs/node.html">W3D6 - Number Quiz</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
