--- a/project/dict.html
+++ b/project/dict.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
     <script src="dict.js"></script>
     <link rel="stylesheet" href="dict.css">
     <title>Dictionary</title>
- 
+
 </head>
+
 <body>
     <header>
-        <h1>WAP Online Dictionary</h1>
+        <h1>WAP ONLINE DICTIONARY</h1>
     </header>
-    <div>
-        <label for="Term">Term</label><input type="text" name="term" id="wordSearch"> <button type="submit" id="submit">Lookup</button>
-    </div>
-       
-    <div id="main"></div>
+
+    <fieldset>
+        <legend for="Term">TERM</legend>
+        <input class="w3-input w3-animate-input" type="text" name="term" id="wordSearch" style="width:30%">
+        <br>
+        <button type="submit" id="submit"
+            class="w3-btn w3-white w3-border w3-border-white w3-round-large">Lookup</button>
+        <div id="main"></div>
+    </fieldset>
+
+    <br>
+
     <div class="footer">
+        <b>&copy;Lidia Mekonnen, Mesfin</b>
+        <br>Maharishi University
+        <Address>1000 N 4th St. Fairfield, IOWA, 52557 </Address>
+        <Address>Email: lmesfin@miu.edu</Address>
         <div id="validation">
             <a href="https://validator.w3.org/check/referer">
-                <img alt="Valid HTML!" src="images/w3c-html.png"/>
+                <img alt="Valid HTML!" src="images/w3c-html.png" />
             </a>
             <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img alt="Valid CSS!" src="images/w3c-css.png"/>
+                <img alt="Valid CSS!" src="images/w3c-css.png" />
             </a>
             <a href="https://webster.cs.washington.edu/jslint/?referer">
                 <img src="images/w3c-js.png" alt="JS CHECK!" />
             </a>
-        
-        </div>    
-  
+
+        </div>
+
 </body>
+
 </html>
