--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Lidia Mekonnen, Mesfin
         </h1>
         <ul>
-            <li><a href="selu/selu.html">W1D1 - Homepage</a></li><br>
+            <li><a href="yabal/yabal.html">W1D1 - Homepage</a></li><br>
             <li><a href="aboutme/aboutme.html">W1D2 - About me</a></li>
             <li><a href="pie/pie.html">W1D2 - Recipe</a></li><br>
             <li><a href="movie/tmnt.html">W1D3 - Movie Review</a></li><br>
