--- a/mus/mus.html
+++ b/mus/mus.html
@@ -24,7 +24,7 @@
 
 <div>
      
-    😇😇The Lord bless you and keep you; the Lord make his face to shine upon 
+    The Lord bless you and keep you; the Lord make his face to shine upon 
     you and be gracious to you; the Lord lift up his countenance upon you and 
     give you peace.Numbers 6:24-26😇😇
 </div>
